--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular test</title>
+  <title>Articlex</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -12,6 +12,7 @@
   <script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
 </head>
 <body ng-app="myApp">
+
   <nav class="navbar navbar-default">
     <div class="container-fluid col-md-4">
       <a class="navbar-brand" href="#/">Articlex</a>
@@ -21,20 +22,22 @@
         <li><a href="#/">Tags</a></li>
       </ul>
     </div>
-    <div class="container">
-
-    </div>
   </nav>
 
   <div ng-view></div>
 
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
+
+  <!-- Controllers -->
   <script src="js/controllers/MainController.js"></script>
   <script src="js/controllers/ArticleController.js"></script>
+
+  <!-- Services -->
   <script src="js/services/articles.js"></script>
+
+  <!-- Libraries -->
   <script src="node_modules/nprogress/nprogress.js"></script>
 </body>
 </html>
