Show article creation time in relative time

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.5/angular-sanitize.js"></script>
     <script type="text/javascript" src="bower_components/tinymce-dist/tinymce.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
+    <script type="text/javascript" src="node_modules/angular-relative-date/dist/angular-relative-date.js"></script>
 
 </head>
 
@@ -31,7 +32,6 @@
             </button>
             <ul class="user-menu dropdown-menu dropdown-menu-right">
                 <li><a href="#/">Profile</a></li>
-                <li><a href="#/">Settings</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#/">Sign out</a></li>
             </ul>
