--- a/index.html
+++ b/index.html
@@ -54,21 +54,10 @@
 
     <!-- Services -->
     <script src="/js/services/articles.js"></script>
-    <script src="/js/services/UserInfo.js"></script>
+    <script src="/js/services/userinfo.js"></script>
 
     <!-- Libraries -->
     <script src="/node_modules/nprogress/nprogress.js"></script>
-
-    <!-- We use client cookies to save the user credentials -->
-    <script src="//code.angularjs.org/1.2.16/angular-cookies.min.js"></script>
-
-    <!-- Auth0 Lock script and AngularJS module -->
-    <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
-    <!-- angular-jwt and angular-storage -->
-    <script type="text/javascript" src="//cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js"></script>
-    <script type="text/javascript" src="//cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
-
-    <script src="//cdn.auth0.com/w2/auth0-angular-4.js"></script>
 
 
 
