Truncate content text to show on homepage

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <!-- Libraries -->
     <script src="/node_modules/nprogress/nprogress.js"></script>
+    <script src="/js/cutstring.js"></script>
 
 
 
