--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="/js/controllers/ArticleController.js"></script>
     <script src="/js/controllers/EditorController.js"></script>
     <script src="/js/controllers/LoginController.js"></script>
+    <script src="/js/controllers/FollowingController.js"></script>
 
     <!-- Services -->
     <script src="/js/services/articles.js"></script>
